# zephyr

drivers/counter/: counter_ifx_cat1.c
samples/boards/infineon/pulse_counter/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/boards/infineon/pulse_counter/boards/: cy8cproto_062_4343w.overlay
samples/boards/infineon/pulse_counter/src/: main.c
